@@ -1,0 +1,10 @@
+#!/bin/sh -e
+
+for i in kinit klist kswitch ksu kpasswd kdestroy kadmin ktutil
+do
+    update-alternatives --install /usr/bin/$i $i /usr/bin/${i}.mit 30 \
+    --slave /usr/share/man/man1/${i}.1.gz ${i}.1.gz /usr/share/man/man1/${i}.mit.1.gz
+done
+
+#DEBHELPER#
+
