@@ -3,6 +3,12 @@ krb5 (1.20.1-4) UNRELEASED; urgency=medium
   [ Steve Langasek ]
   * libkrb5support0: require strict binary dependency to deal with glibc 2.38, Closes: #1043184
 
+  [Jelmer Vernooij]
+  * krb5-user: Use alternatives for kinit, klist, kswitch, ksu, kpasswd,
+    kdestroy, kadmin and ktutil. This allows installation
+    together with heimdal-clients. Closes: #213316, #751203
+
+
  -- Sam Hartman <hartmans@debian.org>  Thu, 24 Aug 2023 13:06:52 -0600
 
 krb5 (1.20.1-3) unstable; urgency=high
